# river_hierarchy

./: .gitignore  README.md  smal.py
RAPID/: README.md  run_prepare_experiment.py  run_rapid_experiment.py
SWORD_gauge_match/: .gitignore  README.md  pyproject.toml
SWORD_gauge_match/r/: fetch_rivretrieve_metadata.R
SWORD_gauge_match/src/gauge_sword_match/: canada_manual_download.py  chile_manual_excel.py  cli.py  grdc_io.py  hydraulics.py  mrc_rating_curve.py  qa_exports.py  rivretrieve_bridge.py  scoring.py  spatial_index.py  subdaily_download.py  sword_io.py  timeseries_io.py  us_manual_download.py  us_manual_import.py
SWORD_gauge_match/src/gauge_sword_match/subdaily_locator/: __init__.py  brazil.py  bulgaria.py  canada.py  chile.py  colombia.py  french_guiana.py  inventory.py  mekong_mrc.py  niger_basin_abn.py  nigeria.py  runner.py  russia.py  seeds.py  usgs.py
SWORD_gauge_match/tests/: test_candidate_search.py  test_event_detection.py  test_example_bboxes.py  test_hydraulics.py  test_kinematic_screen.py  test_subdaily_download.py  test_subdaily_exports.py  test_subdaily_locator.py  test_us_manual_import.py
configs/: example.yml
hierarchy_level_definition/: README.md  __init__.py  run_unit_workflow.py
network_variants/: README.html  README.md  __init__.py  collapse_experiment.py  run_collapse_experiment.py  run_variant_workflow.py  sword_matching.py  test_network_variants.ipynb  variant_generation.py
r/: fetch_rivretrieve_timeseries.R
rivgraph_centerline/: README.md  environment.update.yml  environment.yml  run_workflow.py
tests/: test_grdc_io.py  (+10 more)
(+128 files in other folders)
